2010-05-12 18:48-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h: Added method 
	rightMouseMenu:forEvent: to allow theming of transient and
	context menus.
	* Source/GSThemeMenu.m: Implementation of method 
	rightMouseMenu:forEvent: to allow theming of transient and
	context menus.
	* Source/NSMenu.m: use the theming code implemented above instead
	of rendering the menu directly.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSWindow.m: Fix a rather long standing incompatibility
	and make -initWithContentRect:styleMask:backing:defer: the
	designated initializer of NSWindow.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSNibLoading.m (-nibInstantiateWithOwner:topLevelObjects:):
	Next attempt at getting .nib file loading right. Make sure that
	-nibInstantiate is sent to all loaded objects and also make sure
	that -awakeFromNib is sent to the nib's owner.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSDocumentController.m (-init, -maximumRecentDocumentCount,
	-noteNewRecentDocumentURL:): Make number of remembered recent
	documents configurable with a user preference and fix a bug where
	one extra document was remembered.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSXibLoader.m (-awakeData:withContext:): Fix bug where
	some objects from the xib file were not sent an -awakeFromNib
	message.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSMenu.h:
	* Source/NSMenu.m (-_initWithCoder:, -dealloc, -_name,
	-_setName:, -awakeFromNib): Add a private name attribute to menus
	to identify special purpose menus. Fixes a bug where the services,
	windows, and recent documents menu were defunct when loading the
	menu from a .nib file.

2010-05-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/AppKit/NSDocumentController.h:
	* Source/NSDocumentFrameworkPrivate.h:
	* Source/NSDocumentController.m (-_recentDocumentsMenu,